--- a/src/app/(auth)/signup/signup.module.css
+++ b/src/app/(auth)/signup/signup.module.css
@@ -3,7 +3,7 @@
     align-items: center;
 }
 
-input[type=file]::file-selector-button {
+#input {
     width:50%;
     margin-right: 20px;
     border: none;
@@ -15,7 +15,7 @@ input[type=file]::file-selector-button {
     transition: background .2s ease-in-out;
   }
   
-  input[type=file]::file-selector-button:hover {
+  #input {
     width:50%;
     background: #3797ED;
   }
