--- a/src/components/book-seat-modal/modal.module.css
+++ b/src/components/book-seat-modal/modal.module.css
@@ -1,8 +1,3 @@
-.form{
-    width: 100%;
-    align-items: center;
-}
-
 #input {
     width:90%;
     margin-right: 20px;
@@ -10,7 +5,9 @@
     background: #3797EF;
     padding: 10px 20px;
     border-radius: 10px;
-    color: #fff;
+    color: #ffffff;
     cursor: pointer;
     transition: background .2s ease-in-out;
   }
+  
+ 
